# gentext-app

./: Dockerfile  Lin Cui_A2.ipynb  pyproject.toml
app/: bigram_model.py  main.py
